--- a/PorosApp/login-server/pom.xml
+++ b/PorosApp/login-server/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
   	<groupId>com.tencent.tars</groupId>
@@ -10,7 +8,7 @@
   </parent>
 
   <groupId>com.pxhua.video</groupId>
-  <artifactId>pxhua-server-base</artifactId>
+  <artifactId>login-server</artifactId>
   <name>${project.artifactId}</name>
   <version>1.0.0</version>
   <packaging>war</packaging>
@@ -34,11 +32,21 @@
 		<version>1.0.0</version>
 		<type>jar</type>
 	</dependency>
+	<dependency>
+		<groupId>com.alibaba</groupId>
+	    <artifactId>fastjson</artifactId>
+		<version>1.2.61</version>
+	</dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>3.2.0</version>
     </dependency>
   </dependencies>
 
@@ -69,7 +77,7 @@
 			<configuration>
 				<tars2JavaConfig>
 					<tarsFiles>
-						<tarsFile>${basedir}/src/main/resources/http_cgi.tars</tarsFile>
+						<tarsFile>${basedir}/src/main/resources/account.tars</tarsFile>
 					</tarsFiles>
 					<tarsFileCharset>UTF-8</tarsFileCharset>
 					<servant>true</servant>
